--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,52 @@
+# Node modules (required packages)
+node_modules/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
 .env
-/node_modules
+.env.local
+.env.*.local
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm/
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Coverage directory used by testing tools
+coverage/
+
+# Build output (if applicable)
+dist/
+build/
+
+# VSCode settings
+.vscode/
+
+# Temporary files
+*.swp
+*.swo
+*.bak
+*.tmp
+
+# Docker files (optional, depending on your setup)
+docker-compose.override.yml
+
+# Render/Deploy platform specific
+*.render
