--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.4",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "onnxruntime-node": "^1.22.0-rev"
   }
 }
