--- a/.github/workflows/docker-push-image.yml
+++ b/.github/workflows/docker-push-image.yml
@@ -17,7 +17,7 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: 🛠️ Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/smartcharge-backend ./backend
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/smartcharge-backend .
 
       - name: 📤 Push to Docker Hub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/smartcharge-backend
