--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 pymongo==4.13.2
-numpy==1.26.4   # Instead of 2.x (which requires Python >= 3.10)
+numpy==1.26.4
 joblib==1.3.2
-onnxruntime
+onnxruntime==1.17.1
+pandas==2.2.2
